--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "axios": "^1.7.7",
+    "axios": "^1.7.9",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
-    "patchright": "^1.49.1"
+    "patchright": "^1.49.1",
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
